; ModuleID = '/home/carl/AnghaBench/linux/drivers/fpga/extr_socfpga-a10.c_socfpga_a10_fpga_set_cfg_width.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/fpga/extr_socfpga-a10.c_socfpga_a10_fpga_set_cfg_width.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.a10_fpga_priv = type { i32 }

@A10_FPGAMGR_IMGCFG_CTL_02_CFGWIDTH_SHIFT = common dso_local global i32 0, align 4
@A10_FPGAMGR_IMGCFG_CTL_02_OFST = common dso_local global i32 0, align 4
@A10_FPGAMGR_IMGCFG_CTL_02_CFGWIDTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.a10_fpga_priv*, i32)* @socfpga_a10_fpga_set_cfg_width to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @socfpga_a10_fpga_set_cfg_width(%struct.a10_fpga_priv* %0, i32 %1) #0 {
  %3 = alloca %struct.a10_fpga_priv*, align 8
  %4 = alloca i32, align 4
  store %struct.a10_fpga_priv* %0, %struct.a10_fpga_priv** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @A10_FPGAMGR_IMGCFG_CTL_02_CFGWIDTH_SHIFT, align 4
  %6 = load i32, i32* %4, align 4
  %7 = shl i32 %6, %5
  store i32 %7, i32* %4, align 4
  %8 = load %struct.a10_fpga_priv*, %struct.a10_fpga_priv** %3, align 8
  %9 = getelementptr inbounds %struct.a10_fpga_priv, %struct.a10_fpga_priv* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @A10_FPGAMGR_IMGCFG_CTL_02_OFST, align 4
  %12 = load i32, i32* @A10_FPGAMGR_IMGCFG_CTL_02_CFGWIDTH, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @regmap_update_bits(i32 %10, i32 %11, i32 %12, i32 %13)
  ret void
}

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
